--- a/style.css
+++ b/style.css
@@ -409,4 +409,73 @@ border: 2px solid var(--unnamed-color-fd8c94);
         width: 90px;
         height: 0;
     }
+
+    .old-friends {
+        top: 78px;
+        left: 55px;
+        width: 246px;
+        height: 68px;
+        font: normal normal normal 50px/65px Prata;
+        letter-spacing: 10px;
+    }
+    
+    .keep-updated {
+        top: 383px;
+        left: 53px;
+        width: 261px;
+        height: 69px;
+        font: normal normal normal 14px/30px PT Sans;
+        letter-spacing: 0.7px;
+    }
+    
+    .go-shop {
+        top: 467px;
+        left: 53px;
+        width: 270px;
+        height: 55px;
+        border: 1px solid var(--unnamed-color-fd8c94);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .line6 {
+        top: 349px;
+        left: 70px;
+        width: 102px;
+        height: 0px;
+    }
+    
+    .circle1 {
+        top: 344px;
+        left: 55px;
+        width: 10px;
+        height: 10px;
+    }
+    
+    .circle2 {
+        top: 344px;
+        left: 176px;
+        width: 10px;
+        height: 10px;
+    }
+    
+    .circle3 {
+        top: 341px;
+        left: 191px;
+        width: 15px;
+        height: 15px;
+    }
+    
+    .circle4 {
+        top: 344px;
+        left: 211px;
+        width: 10px;
+        height: 10px;
+    }
+    
+    .line1, .line2, .line3, .line7, circle, .signup-underline {
+        display: none;
+    }
 }
